--- a/mitou-final.tex
+++ b/mitou-final.tex
@@ -1,3 +1,3 @@
-\documentclass[12pt, unicode, svgnames]{beamer}
+\documentclass[12pt, unicode, svgnames, aspectratio=169]{beamer}
 
 \input{main.tex}
